tests/parser/validinput/func_var_conf.idp
vocabulary V{
 	type X isa int
 	x:X
}
theory T:V{
	x=1 & ?x: x=1.
}

structure S : V{
	X = {1}
}
procedure main(){
	return 1
}
