tests/parser/invalidinput/floatmin.idp
vocabulary V{
	type X isa float
}
theory T:V{
}
structure S:V{
	X = {
		0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000589
	}
}
procedure main(){
	print(S)
	return 1
}